css fix z-index

--- a/workmate/static/workmate/workmate.css
+++ b/workmate/static/workmate/workmate.css
@@ -20,6 +20,7 @@
 
 /* sidebar */
 .fixed.launch.button {
+    z-index: 99;
     position: fixed;
     display: none;
     top: 6.7em;
